fix: adjust text to button vertical spacing
Use --spectrum-spacing-100 instead of toast-bottom-to-text for both bottom spacing and vertical spacing between text and action button to more closely match the design since both tokens cannot be used.

--- a/components/toast/index.css
+++ b/components/toast/index.css
@@ -37,6 +37,7 @@ governing permissions and limitations under the License.
   --spectrum-toast-spacing-top-edge-to-icon: var(--spectrum-toast-top-to-workflow-icon);
 
   --spectrum-toast-spacing-text-to-action-button-horizontal: var(--spectrum-spacing-300);
+  --spectrum-toast-spacing-text-to-action-button-vertical: var(--spectrum-spacing-100);
   --spectrum-toast-spacing-close-button: var(--spectrum-spacing-100);
 
   /* Color */
@@ -126,7 +127,7 @@ governing permissions and limitations under the License.
   box-sizing: border-box;
 
   padding-block-start: calc(var(--mod-toast-top-to-text, var(--spectrum-toast-top-to-text)) - var(--mod-spacing-100, var(--spectrum-spacing-100)));
-  padding-block-end: calc(var(--mod-toast-bottom-to-text, var(--spectrum-toast-bottom-to-text)) - var(--mod-spacing-100, var(--spectrum-spacing-100)));
+  padding-block-end: var(--mod-toast-spacing-text-to-action-button-vertical, var(--spectrum-toast-spacing-text-to-action-button-vertical));
 
   padding-inline-end: var(--mod-toast-spacing-text-to-action-button-horizontal, var(--spectrum-toast-spacing-text-to-action-button-horizontal));
   padding-inline-start: 0;
